Commit translated content

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -357,6 +357,13 @@
               href: device-restrictions-windows-holographic.md
             - name: Android for Work
               href: device-restrictions-android-for-work.md
+        - name: Az Endpoint Protection konfigurálása
+          href: endpoint-protection-configure.md
+          items:
+            - name: macOS
+              href: endpoint-protection-macos.md
+            - name: Windows 10
+              href: endpoint-protection-windows-10.md
         - name: E-mail-beállítások konfigurálása
           href: email-settings-configure.md
           items:
@@ -398,8 +405,6 @@
               href: wi-fi-settings-import-windows-8-1.md
         - name: A Windows 10-kiadás frissítési beállításainak konfigurálása
           href: edition-upgrade-configure-windows-10.md
-        - name: Windows 10-es Endpoint Protection
-          href: endpoint-protection-windows-10.md
         - name: A Windows 10 oktatási funkcióinak konfigurálása
           href: education-settings-configure.md
         - name: Az iOS oktatási funkcióinak konfigurálása
