--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -170,10 +170,12 @@
               href: windows-bulk-enroll.md
             - name: Windows AutoPilot üzembe helyezési program
               href: enrollment-autopilot.md
-            - name: Beléptetés állapota képernyő
-              href: windows-enrollment-status.md
         - name: Az androidos eszközök regisztrálásának beállítása
-          href: android-enroll.md
+          items:
+            - name: Az androidos eszközök regisztrálásának beállítása
+              href: android-enroll.md
+            - name: Samsung Knox Mobile Enrollment
+              href: android-samsung-knox-mobile-enroll.md
         - name: iOS-eszközök regisztrálásának beállítása
           href: ios-enroll.md
           items:
@@ -462,6 +464,8 @@
           href: conditional-access-intune-common-ways-use.md
         - name: A helyszíni Exchange-összekötő telepítése
           href: exchange-connector-install.md
+        - name: Az Exchange szolgáltatási összekötőjének telepítése
+          href: exchange-service-connector-configure.md
         - name: Feltételes hozzáférési szabályzat létrehozása és hozzárendelése
           href: conditional-access-exchange-create.md
         - name: Feltételes hozzáférési szabályzatok ismételt hozzárendelése az Intune klasszikus portáljáról
@@ -511,7 +515,7 @@
                   href: mtd-device-compliance-policy-create.md
                 - name: MTD engedélyezése az Intune-ban
                   href: mtd-connector-enable.md
-        - name: Veszélyforrások elleni fejlett védelem
+        - name: Windows Defender ATP
           href: advanced-threat-protection.md
         - name: Hálózati hozzáférés-vezérlés
           href: network-access-control-integrate.md
@@ -655,8 +659,6 @@
           href: app-wrapper-prepare-android.md
         - name: Intune App SDK Android rendszerhez
           href: app-sdk-android.md
-        - name: Intune App SDK Cordova beépülő modul
-          href: app-sdk-cordova.md
         - name: Intune App SDK Xamarin összetevő
           href: app-sdk-xamarin.md
     - name: Az Intune-adattárház használata
