--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -488,6 +488,30 @@
           href: conditional-access-assign-jamf.md
     - name: Eszközadatok védelme
       items:
+        - name: Adatvédelem és személyes adatok
+          href: privacy-personal-data.md
+          items:
+            - name: Adatgyűjtés
+              href: privacy-data-collect.md
+            - name: Adattárolás és -feldolgozás
+              href: privacy-data-store-process.md
+            - name: Adatbiztonság és -megosztás
+              href: privacy-data-secure-share.md
+              items:
+                - name: Az Apple által az Intune-nak küldött adatok
+                  href: data-apple-sends-to-intune.md
+                - name: A Google által az Intune-nak küldött adatok
+                  href: data-google-sends-to-intune.md
+                - name: Az Intune által az Apple-nek küldött adatok
+                  href: data-intune-sends-to-apple.md
+                - name: Az Intune által a Google-nek küldött adatok
+                  href: data-intune-sends-to-google.md
+                - name: A Jamf Pro információmegosztása az Intune-nal
+                  href: conditional-access-integrate-jamf.md
+            - name: Személyes adatok megtekintése és javítása
+              href: privacy-data-view-correct.md
+            - name: 'Naplózás, exportálás, törlés'
+              href: privacy-data-audit-export-delete.md
         - name: Mobile Threat Defense
           href: mobile-threat-defense.md
           items:
