--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -148,7 +148,7 @@
         - name: Regisztrációs beállítások
           href: enrollment-options.md
           items:
-            - name: használati feltételei
+            - name: Használati feltételek
               href: terms-and-conditions-create.md
             - name: Korlátozások
               href: enrollment-restrictions-set.md
@@ -158,7 +158,7 @@
               href: corporate-identifiers-add.md
             - name: Többtényezős hitelesítés
               href: multi-factor-authentication.md
-            - name: Készülékregisztráció-kezelő
+            - name: Eszközregisztráció-kezelő
               href: device-enrollment-manager-enroll.md
             - name: Eszközök hozzárendelése csoportokhoz
               href: device-group-mapping.md
@@ -270,6 +270,8 @@
           items:
             - name: Alkalmazások belefoglalása vagy kizárása
               href: apps-inc-exl-assignments.md
+            - name: Windows 10-alkalmazások telepítése
+              href: apps-windows-10-app-deploy.md
         - name: Alkalmazások figyelése
           href: apps-monitor.md
         - name: Alkalmazások konfigurálása
@@ -497,7 +499,7 @@
         - name: Adatvédelem és személyes adatok
           href: privacy-personal-data.md
           items:
-            - name: Adatgyűjtés
+            - name: 'Adatgyűjtés '
               href: privacy-data-collect.md
             - name: Adattárolás és -feldolgozás
               href: privacy-data-store-process.md
@@ -644,6 +646,8 @@
       items:
         - name: Segítség a felhasználóknak a problémák elhárításában
           href: help-desk-operators.md
+        - name: Vállalati erőforrás-hozzáférési problémák elhárítása
+          href: troubleshoot-company-resource-access-problems.md
         - name: Auditnaplók Intune-tevékenységekhez
           href: monitor-audit-logs.md
         - name: Alkalmazásvédelmi naplók áttekintése
@@ -693,7 +697,9 @@
           href: app-wrapper-prepare-android.md
         - name: Intune App SDK Android rendszerhez
           href: app-sdk-android.md
-        - name: Intune App SDK Xamarin összetevő
+        - name: Intune App SDK Cordova beépülő modul
+          href: app-sdk-cordova.md
+        - name: Intune App SDK Xamarin-kötések
           href: app-sdk-xamarin.md
     - name: Az Intune-adattárház használata
       href: reports-nav-create-intune-reports.md
