--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -180,7 +180,13 @@
           items:
             - name: Az androidos eszközök regisztrálásának beállítása
               href: android-enroll.md
-            - name: Android for Work-eszközök kezelése
+            - name: Az Intune összekapcsolása vállalati Androiddal
+              href: connect-intune-android-enterprise.md
+            - name: Az Android beállítása munkahelyi profillal történő regisztráláshoz
+              href: android-work-profile-enroll.md
+            - name: Az Android beállítása kioszk módú regisztráláshoz
+              href: android-kiosk-enroll.md
+            - name: Androidos munkahelyi profilos eszközök kezelése
               href: android-enterprise-overview.md
             - name: Samsung Knox Mobile Enrollment
               href: android-samsung-knox-mobile-enroll.md
@@ -255,7 +261,7 @@
                   items:
                     - name: A Céges portál alkalmazás manuális hozzáadása
                       href: store-apps-company-portal-app.md
-                - name: Android for Work-alkalmazások
+                - name: Androidos munkahelyi profilos alkalmazások
                   href: apps-add-android-for-work.md
                 - name: Windows 10-es Office 365-alkalmazások
                   href: apps-add-office365.md
@@ -326,6 +332,8 @@
                       href: app-protection-policy-settings-android.md
                     - name: iOS-beállítások
                       href: app-protection-policy-settings-ios.md
+                    - name: Hozzáférési műveletek
+                      href: app-protection-policies-access-actions.md
                     - name: Adatátvitel kivételek
                       href: app-protection-policies-exception.md
                 - name: Az alkalmazásvédelmi szabályzatok ellenőrzése
@@ -379,7 +387,7 @@
               href: device-restrictions-windows-10-teams.md
             - name: Windows Holographic for Business
               href: device-restrictions-windows-holographic.md
-            - name: Android for Work
+            - name: Androidos munkahelyi profil
               href: device-restrictions-android-for-work.md
         - name: Az Endpoint Protection konfigurálása
           href: endpoint-protection-configure.md
@@ -390,6 +398,10 @@
               href: endpoint-protection-windows-10.md
         - name: Kioszkbeállítások konfigurálása
           href: kiosk-settings.md
+        - name: Androidos kioszkbeállítások konfigurálása
+          href: android-kiosk-settings.md
+        - name: Vállalati androidos kioszkbeállítások
+          href: android-enterprise-settings.md
         - name: E-mail-beállítások konfigurálása
           href: email-settings-configure.md
           items:
@@ -465,7 +477,7 @@
       items:
         - name: Android-szabályzat létrehozása
           href: compliance-policy-create-android.md
-        - name: Android for Work-szabályzat létrehozása
+        - name: Szabályzatok létrehozása Androidos munkahelyi profilhoz
           href: compliance-policy-create-android-for-work.md
         - name: Szabályzat létrehozása a Google Play Protect-támogatáshoz
           href: compliance-policy-create-google-play-protect.md
@@ -691,7 +703,7 @@
               href: custom-settings-windows-10.md
             - name: Windows Holographic for Business
               href: custom-settings-windows-holographic.md
-            - name: Android for Work
+            - name: Androidos munkahelyi profil
               href: custom-settings-android-for-work.md
 - name: Fejlesztői útmutatás
   items:
