--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -396,12 +396,12 @@
               href: endpoint-protection-macos.md
             - name: Windows 10
               href: endpoint-protection-windows-10.md
-        - name: Kioszkbeállítások konfigurálása
-          href: kiosk-settings.md
-        - name: Androidos kioszkbeállítások konfigurálása
+        - name: Androidos kioszkbeállítások
           href: android-kiosk-settings.md
         - name: Vállalati androidos kioszkbeállítások
           href: android-enterprise-settings.md
+        - name: Windows 10-es kioszkbeállítások
+          href: kiosk-settings.md
         - name: E-mail-beállítások konfigurálása
           href: email-settings-configure.md
           items:
@@ -439,7 +439,9 @@
               href: wi-fi-settings-ios.md
             - name: macOS
               href: wi-fi-settings-macos.md
-            - name: Windows 8.1 és Windows 10
+            - name: Windows 10
+              href: wi-fi-settings-windows.md
+            - name: "Windows\_8.1"
               href: wi-fi-settings-import-windows-8-1.md
         - name: Oktatás
           items:
@@ -458,6 +460,10 @@
               href: certificates-scep-configure.md
             - name: PKCS
               href: certficates-pfx-configure.md
+            - name: E-mailek titkosítása S/MIME protokollal
+              href: certificates-s-mime-encryption-sign.md
+            - name: Külső hitelesítésszolgáltató használata SCEP-pel
+              href: certificate-authority-add-scep-overview.md
             - name: Symantec PKI Manager webszolgáltatás
               href: certificates-symantec-configure.md
         - name: A Windows Information Protection beállításainak konfigurálása
@@ -710,6 +716,8 @@
               href: custom-settings-android-for-work.md
 - name: Fejlesztői útmutatás
   items:
+    - name: Külső hitelesítésszolgáltató hozzáadása API-val
+      href: scep-libraries-apis.md
     - name: Alkalmazások védelme az Intune App SDK-val
       href: app-sdk.md
       items:
