commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -443,6 +443,8 @@
               href: wi-fi-settings-windows.md
             - name: "Windows\_8.1"
               href: wi-fi-settings-import-windows-8-1.md
+        - name: eSIM mobilprofilok konfigurálása
+          href: esim-device-configuration.md
         - name: Oktatás
           items:
             - name: Megosztott eszközök iOS-en
