commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -31,12 +31,20 @@ items:
     href: quickstart-create-group.md
   - name: Házirend létrehozása
     href: quickstart-create-policy.md
+  - name: Hossz megadása az eszközök jelszavainál
+    href: quickstart-set-password-length-android.md
   - name: Automatikus regisztráció beállítása
     href: quickstart-setup-auto-enrollment.md
   - name: Egyéni szerepkör létrehozása és hozzárendelése
     href: quickstart-create-custom-role.md
   - name: E-mail-eszközprofil létrehozása
     href: quickstart-email-profile.md
+- name: Oktatóanyagok
+  items:
+  - name: E-mailek védelme a felügyelt eszközökön
+    href: tutorial-protect-email-on-enrolled-devices.md
+  - name: Windows-eszközök regisztrálása Autopilottal
+    href: tutorial-use-autopilot-enroll-devices.md
 - name: Forgatókönyvek végrehajtási útmutatói
   items:
   - name: Az Exchange Online védelme
@@ -237,6 +245,8 @@ items:
       href: device-profile-android-teamviewer.md
     - name: Windows 10-es PIN-kód alaphelyzetbe állítása
       href: device-windows-pin-reset.md
+    - name: Az Exchange szolgáltatási összekötőjének telepítése
+      href: exchange-service-connector-configure.md
     - name: Eszköz szinkronizálása
       href: device-sync.md
     - name: Eszközkészlet vizsgálata
@@ -442,6 +452,8 @@ items:
       items:
       - name: Android
         href: wi-fi-settings-android.md
+      - name: Vállalati Android és kioszkmód
+        href: wi-fi-settings-android-enterprise.md
       - name: iOS
         href: wi-fi-settings-ios.md
       - name: macOS
@@ -517,8 +529,6 @@ items:
       href: conditional-access-intune-common-ways-use.md
     - name: A helyszíni Exchange-összekötő telepítése
       href: exchange-connector-install.md
-    - name: Az Exchange szolgáltatási összekötőjének telepítése
-      href: exchange-service-connector-configure.md
     - name: Feltételes hozzáférési szabályzat létrehozása és hozzárendelése
       href: conditional-access-exchange-create.md
     - name: Feltételes hozzáférési szabályzatok ismételt hozzárendelése az Intune klasszikus portáljáról
@@ -823,9 +833,9 @@ items:
       href: intune-legacy-pc-client.md
   - name: Szószedet
     href: intune-glossary.md
-ms.openlocfilehash: a2820903d6a3609df50290af18843200ef076158
-ms.sourcegitcommit: d92caead1d96151fea529c155bdd7b554a2ca5ac
+ms.openlocfilehash: ad9fe7c9c344cbbd244515cb9c2025b46e74eddd
+ms.sourcegitcommit: 24d9ae0396ca410f72cc061a3c4c402835ef32a1
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 10/06/2018
-ms.locfileid: "48828057"
+ms.lasthandoff: 10/22/2018
+ms.locfileid: "49643076"
