--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -487,6 +487,8 @@ items:
         href: certificate-authority-add-scep-overview.md
       - name: Symantec PKI Manager webszolgáltatás
         href: certificates-symantec-configure.md
+      - name: SCEP- vagy PKCS-tanúsítványok eltávolítása
+        href: remove-certificates.md
     - name: A Windows Information Protection beállításainak konfigurálása
       href: windows-information-protection-configure.md
     - name: PowerShell-parancsprogramok kezelése
@@ -833,9 +835,9 @@ items:
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
   - name: Szószedet
     href: intune-glossary.md
-ms.openlocfilehash: 809323f7e55e5c1fc010528744e4d0c57273f622
-ms.sourcegitcommit: c969b596ec0fec227484c50f210ba4e159e2e533
+ms.openlocfilehash: 0af72efb9ae319a8af39dcbf6d923a0d3bb6796d
+ms.sourcegitcommit: 7a649a5995600fb91817643e20a5565caedbb8f2
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 10/24/2018
-ms.locfileid: "49983227"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "50149070"
