commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -180,7 +180,7 @@ items:
         href: windows-bulk-enroll.md
       - name: Beléptetés állapota oldal
         href: windows-enrollment-status.md
-      - name: Windows AutoPilot üzembe helyezési program
+      - name: Windows Autopilot Deployment program
         href: enrollment-autopilot.md
     - name: Az androidos eszközök regisztrálásának beállítása
       items:
@@ -212,6 +212,8 @@ items:
         href: device-enrollment-program-enroll-macos.md
     - name: Az Intune-szoftverügyfél telepítése Windows rendszerű számítógépekre
       href: install-the-windows-pc-client-with-microsoft-intune.md
+    - name: Regisztrációmegszakítási jelentés
+      href: enrollment-report-company-portal-abandon.md
     - name: Eszközök regisztrálásával kapcsolatos problémák elhárítása
       href: troubleshoot-device-enrollment-in-intune.md
   - name: Kezelje az eszközöket
@@ -835,9 +837,9 @@ items:
         href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
   - name: Szószedet
     href: intune-glossary.md
-ms.openlocfilehash: 0af72efb9ae319a8af39dcbf6d923a0d3bb6796d
-ms.sourcegitcommit: 7a649a5995600fb91817643e20a5565caedbb8f2
+ms.openlocfilehash: df67b7a497eac9e50a4f9e440a209857e210be09
+ms.sourcegitcommit: 5c2a70180cb69049c73c9e55d36a51e9d6619049
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 10/26/2018
-ms.locfileid: "50149070"
+ms.lasthandoff: 10/30/2018
+ms.locfileid: "50236696"
